--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "webpack-starter",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "webpack",
-    "dev": "webpack serve"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.17.8",
-    "@babel/preset-env": "^7.16.11",
-    "babel-loader": "^8.2.3",
-    "css-loader": "^6.7.1",
-    "html-webpack-plugin": "^5.5.0",
-    "sass": "^1.49.9",
-    "sass-loader": "^12.6.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.70.0",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
-  },
-  "dependencies": {
-    "axios": "^0.26.1"
-  }
+	"name": "webpack-starter",
+	"version": "0.0.1",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"build": "webpack",
+		"start": "webpack serve --progress"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@babel/core": "^7.17.8",
+		"@babel/preset-env": "^7.16.11",
+		"babel-loader": "^8.2.3",
+		"bundlesize": "^0.18.1",
+		"css-loader": "^6.7.3",
+		"html-webpack-plugin": "^5.5.0",
+		"include-media": "^1.4.10",
+		"mini-css-extract-plugin": "^2.7.2",
+		"sass": "^1.56.2",
+		"sass-loader": "^12.6.0",
+		"style-loader": "^3.3.1",
+		"webpack": "^5.75.0",
+		"webpack-bundle-analyzer": "^4.5.0",
+		"webpack-cli": "^4.10.0",
+		"webpack-dev-server": "^4.11.1"
+	},
+	"dependencies": {
+		"axios": "^0.26.1",
+		"gsap": "^3.11.3",
+		"lodash": "^4.17.21"
+	}
 }
